--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.3",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
