Add pagination to exclusive products

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "ngx-pagination": "^6.0.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.3",
